--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="app_compat_light_text">#6d6d6d</color>
     <color name="app_compat_light_hint">#a6a6a6</color>
     <color name="black_87_title">#DE000000</color>
+    <color name="recycler_background">#eaeada</color>
 
 
     <!--ButtonColors for < 5.0-->
