--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,9 @@
     <color name="app_compat_light_hint">#a6a6a6</color>
     <color name="black_87_title">#DE000000</color>
     <color name="recycler_background">#eaeada</color>
-
+    <color name="ripple_dark">@color/mid_grey</color>
+    <color name="mid_grey">#40808080</color>
+    <color name="dark_icon">#99000000</color> <!-- 60% black-->
 
     <!--ButtonColors for < 5.0-->
     <color name="PRESSED_STATE_COLOR">#ffd180</color>
