--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -53,7 +53,8 @@
                     android:orientation="vertical"
                     >
 
-                    <TextView
+                    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+                        style="@style/TextAppearance.GridPrimary"
                         android:id="@+id/sub_text_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -71,6 +72,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ingredient_recycler"
         android:layout_width="match_parent"
@@ -80,6 +82,22 @@
         android:background="@drawable/round_corners"
         android:padding="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.GridPrimary"
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_marginEnd="@dimen/padding_normal"
+        android:layout_marginStart="@dimen/padding_normal"
+        android:layout_marginTop="@dimen/padding_normal"
+        android:breakStrategy="simple"
+        android:ellipsize="end"
+        android:theme="@style/DarkOverlay"
+        app:maxLinesByHeight="true"
+        android:text="@string/recipe_activity_empty_view" />
+
 
 
     <android.support.v7.widget.Toolbar
@@ -103,7 +121,8 @@
                 android:layout_height="@dimen/image_final_width"
                 />
 
-            <TextView
+            <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+                style="@style/TextAppearance.GridPrimary"
                 android:id="@+id/main.textview.title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
