--- a/app/src/main/res/layout/dialog_ingredient.xml
+++ b/app/src/main/res/layout/dialog_ingredient.xml
@@ -23,7 +23,7 @@
             android:hint="@string/hint_dialog_ingredient_quantity"
             android:inputType="numberDecimal"
             android:padding="@dimen/text_view_padding"
-            android:textSize="@dimen/ingredient_adatper_small_text"
+            android:textSize="@dimen/small_text"
             android:textColor="@color/app_compat_light_text"
             android:textColorHint="@color/app_compat_light_hint"/>
 
