--- a/app/src/main/res/layout/list_item_ingredient.xml
+++ b/app/src/main/res/layout/list_item_ingredient.xml
@@ -6,27 +6,31 @@
               android:orientation="horizontal">
 
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.GeneralText"
         android:id="@+id/holder_ingredient_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:textSize="@dimen/ingredient_adapter_tiny_text" />
+        android:textSize="@dimen/tiny_text" />
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.GeneralText"
         android:id="@+id/holder_ingredient_count"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_horizontal" />
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.GeneralText.Small"
         android:id="@+id/holder_units"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <EditText
+    <com.dmtaiwan.alexander.beirecipes.ui.views.FontEditText
+        style="@style/TextAppearance.GeneralText"
         android:id="@+id/holder_proportional_count"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -35,6 +39,7 @@
         android:inputType="numberDecimal" />
 
     <Button
+        style="@style/TextAppearance.GeneralText"
         android:id="@+id/holder_button_ok"
         android:text="@string/button_ok"
         android:layout_width="0dp"
