--- a/app/src/main/res/layout/list_item_ingredient_header.xml
+++ b/app/src/main/res/layout/list_item_ingredient_header.xml
@@ -5,26 +5,30 @@
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.TinyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:text="@string/text_view_ingredient_name"/>
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.TinyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center"
         android:text="@string/text_view_ingredient_count"/>
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.TinyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/text_view_ingredient_unit"/>
 
-    <TextView
+    <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
+        style="@style/TextAppearance.TinyText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
