--- a/app/src/main/res/layout/list_item_ingredient.xml
+++ b/app/src/main/res/layout/list_item_ingredient.xml
@@ -37,17 +37,12 @@
         android:id="@+id/holder_proportional_count"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="4"
         android:hint="@string/edit_text_quantity"
+        android:gravity="center_horizontal"
         android:inputType="numberDecimal" />
 
-    <Button
-        style="@style/TextAppearance.GeneralText"
-        android:id="@+id/holder_button_ok"
-        android:text="@string/button_ok"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"/>
+
 
 
 </LinearLayout>
