--- a/app/src/main/res/layout/dialog_proportion.xml
+++ b/app/src/main/res/layout/dialog_proportion.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
+              android:layout_width="150dp"
               android:layout_height="match_parent"
               android:layout_marginBottom="@dimen/activity_vertical_margin"
               android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -51,7 +51,7 @@
             android:layout_alignParentRight="true"
             android:minHeight="0dp"
             android:minWidth="0dp"
-            android:text="@string/button_dialog_add"
+            android:text="@string/button_dialog_ok"
             android:background="@drawable/custom_button"/>
 
         <Button
