--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/status_bar_background"
@@ -20,18 +21,19 @@
         android:clipToPadding="false"
         android:elevation="1dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.dmtaiwan.alexander.beirecipes.ui.MainActivity"/>
+        tools:context="com.dmtaiwan.alexander.beirecipes.ui.MainActivitay"/>
+
     <ImageButton
         android:id="@+id/fab"
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
-        android:elevation="@dimen/z_fab"
-        android:background="@drawable/fab"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/padding_normal"
         android:layout_marginBottom="@dimen/padding_normal"
-        android:stateListAnimator="@animator/raise"
-        android:src="@drawable/ic_add_dark" />
+        android:layout_marginEnd="@dimen/padding_normal"
+        android:background="@drawable/fab"
+        android:elevation="@dimen/z_fab"
+        android:src="@drawable/ic_add_dark"
+        android:stateListAnimator="@animator/raise"/>
 
     <android.support.v7.widget.Toolbar
 
