--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -54,8 +54,8 @@
                     >
 
                     <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
-                        style="@style/TextAppearance.GridPrimary"
                         android:id="@+id/sub_text_title"
+                        style="@style/TextAppearance.GridPrimary"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -72,32 +72,53 @@
     </android.support.design.widget.AppBarLayout>
 
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/ingredient_recycler"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/round_corners"
-        android:padding="8dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ingredient_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/round_corners_top"
+                android:padding="8dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/direction_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/round_corners_bottom"
+                android:padding="8dp"
+                />
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
     <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
-        style="@style/TextAppearance.GridPrimary"
         android:id="@+id/empty_view"
+        style="@style/TextAppearance.GridPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
         android:layout_marginEnd="@dimen/padding_normal"
         android:layout_marginStart="@dimen/padding_normal"
         android:layout_marginTop="@dimen/padding_normal"
         android:breakStrategy="simple"
         android:ellipsize="end"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/recipe_activity_empty_view"
         android:theme="@style/DarkOverlay"
-        app:maxLinesByHeight="true"
-        android:text="@string/recipe_activity_empty_view" />
-
+        app:maxLinesByHeight="true"/>
 
 
     <android.support.v7.widget.Toolbar
@@ -122,8 +143,8 @@
                 />
 
             <com.dmtaiwan.alexander.beirecipes.ui.views.BaselineGridTextView
-                style="@style/TextAppearance.GridPrimary"
                 android:id="@+id/main.textview.title"
+                style="@style/TextAppearance.GridPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
